fixed forms overlapping with topnav

--- a/MedNet/wwwroot/Styles/Login.css
+++ b/MedNet/wwwroot/Styles/Login.css
@@ -1,7 +1,9 @@
 ﻿/* Login forms */
 
 .login-form {
-    margin: auto;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 30px 40px 40px 30px;
     min-width: 360px;
     max-width: 460px;
