--- a/MedNet/wwwroot/Styles/Shared.css
+++ b/MedNet/wwwroot/Styles/Shared.css
@@ -50,7 +50,7 @@ body {
 }
 
 .content-full {
-    margin: 50px 15px 50px 15px;
+    margin: 0;
     padding: 0px;
 }
 
@@ -112,7 +112,7 @@ body {
 
 .topnav {
     top: 0;
-    position: relative;
+    position: fixed;
     overflow: hidden;
     background-color: #333;
     height: auto;
